--- a/partials/comments.html
+++ b/partials/comments.html
@@ -1,5 +1,5 @@
 <a href="#/"> Back to articles</a>
-<div ng-show="loading">Loading...</div>
+
 <div ng-hide="loading">
    <input type="text" ng-model="query"/>
    {{query}}
@@ -9,7 +9,8 @@
       <option value="content">Organize by content</option>
    </select>
    </h1> {{title}} </h1>
-   <div ng-repeat="comment in comments | filter:{content:query} | orderBy:order">
+   <!-- <div ng-repeat="comment in comments | filter:{content:query} | orderBy:order"> -->
+   <div ng-repeat="comment in comments">
       <article>
          <h2>{{comment.username}}</h2> <br>
          <p> {{comment.content}} </p>
