--- a/partials/comments.html
+++ b/partials/comments.html
@@ -1,6 +1,6 @@
-<a href="#/"> Back to articles</a>
-
 <div ng-hide="loading">
+    <section class="main">
+      <a href="#/"> Back to articles</a>
    <input type="text" ng-model="query"/>
    {{query}}
    <!-- This by link -->
@@ -16,4 +16,5 @@
          <p> {{comment.content}} </p>
       </article>
    </div>
+ </section>
 </div>
