--- a/css/main.css
+++ b/css/main.css
@@ -25,15 +25,15 @@
     General
     ========================================================================== */
     body {
-      font-family: 'Helvetica', 'Arial', sans serif;
       height: 100%;
-      background: #3023ae;
+      background: #325716;
       background-attachment: fixed;
       background-image: url('../images/bg.jpg');
       -webkit-background-size: cover;
       -moz-background-size: cover;
       -o-background-size: cover;
       background-size: cover;
+      font-family: 'Baloo Paaji', cursive, 'Arial', sans serif;;
     }
 
     .loader {
@@ -83,12 +83,13 @@
     }
 
     .main {
-      width: 65%;
-      border: solid 1px #ccc;
+      width: 55%;
+      border: solid 1px #5E8749;
       background: rgba(4, 102, 41, 0.5);
-      margin: 2% auto 0;
+      margin: 2% auto;
       font-size: 0.8em;
       color: #fff;
+      box-shadow: 0px 0px 4px #333;
       animation: animationFrames ease 1s;
       animation-iteration-count: 1;
       transform-origin: 50% 50%;
@@ -97,12 +98,35 @@
       -webkit-animation-iteration-count: 1;
       -webkit-transform-origin: 50% 50%;
       -webkit-animation-fill-mode:forwards; /*Chrome 16+, Safari 4+*/
+      border-radius: 15px;
+    }
+
+    .main.center {
+      text-align: center;
+      font-size: 1em;
+      font-family: 'Open Sans Condensed', sans-serif;
+    }
+
+    .main .back {
+      font-size: 1.15em;
+      margin: 2% auto;
+      text-align: center;
+      display: block;
+      text-decoration: none;
+      color: #fff;
+    }
+
+    .main .back:hover {
+      text-decoration: underline;;
     }
 
     .head--grid {
       display: table;
       width: 100%;
       color: #fff;
+      background: rgba(92, 117, 141, 0.5);
+      border-top-left-radius: 15px;
+      border-top-right-radius: 15px;
     }
 
     .head--grid span {
@@ -110,25 +134,40 @@
       display: table-cell;
       text-align: center;
       padding: 1.5% 0;
+      text-transform: uppercase;
+      font-size: 1.2em;
+    }
+
+    .head--grid .search {
+      width: 55%;
+      border: solid 1px #37745B;
+      border-radius: 15px;
+      text-align: center;
+      margin: 2% 0 0;
+      padding: 2% 1%;
+      color: #ccc;
+      background: #fafafa;
     }
 
     .content--grid {
       display: table;
       width: 100%;
-      border-top: 1px #eee solid;
+      border-top: 1px #5E8749 solid;
     }
 
-    .content--grid:nth-child(2n+2) {
-      background: #fafaf8;
+    .content--grid:nth-child(2n+1) {
+      background: rgba(40, 119, 54, 0.5);
     }
 
     .content--grid span {
-      line-height: 1.2;
+      font-size: 1.35em;
+      line-height: 1.3;
       width: 33%;
       display: table-cell;
       text-align: center;
       padding: 1% 0;
       vertical-align: middle;
+      font-family: 'Open Sans Condensed', sans-serif;
     }
 
     .content--grid .chart {
